--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/app/scss/main.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/scss/"]
+            },
             "scripts": []
           },
           "configurations": {
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5c8ddd0b-5cea-4600-a15f-2257ee405d8a"
   }
 }
